refactor: add cors env value