@@ -1,10 +1,9 @@
 package com.maps.configuration;
 
 import lombok.NonNull;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.env.Environment;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -23,8 +22,8 @@ import java.util.List;
 @Configuration
 public class ConfigurationCors {
 
-    @Autowired
-    private Environment environment;
+    @Value("${application.cors}")
+    private String allowedOrigins;
 
     /**
      * CORS configuration for Spring MVC
@@ -34,12 +33,7 @@ public class ConfigurationCors {
         return new WebMvcConfigurer() {
             @Override
             public void addCorsMappings(@NonNull CorsRegistry registry) {
-
-                String allowedOriginsStr = environment.getProperty("ALLOWED_ORIGINS", 
-                    "https://maps-front.vercel.app,https://maps-front.onrender.com,http://localhost:8080,http://localhost:10000,http://localhost:5173,https://maps.chm.mb,https://www.maps.chm.mb");
-                
-                List<String> allowedOriginsList = Arrays.asList(allowedOriginsStr.split(","));
-                
+                List<String> allowedOriginsList = Arrays.asList(allowedOrigins.split(","));
                 registry.addMapping("/**")
                         .allowedOriginPatterns(allowedOriginsList.toArray(new String[0]))
                         .allowedMethods("POST", "GET", "PUT", "DELETE", "OPTIONS")
@@ -57,14 +51,11 @@ public class ConfigurationCors {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        String allowedOriginsStr = environment.getProperty("ALLOWED_ORIGINS", 
-            "https://maps-front.vercel.app,https://maps-front.onrender.com,http://localhost:10000,http://localhost:5173,https://maps.chm.mb,https://www.maps.chm.mb,moz-extension://c740ec45-5e71-4408-af24-dd6a5b1f37a2");
-        
-        List<String> allowedOriginsList = Arrays.asList(allowedOriginsStr.split(","));
+        List<String> allowedOriginsList = Arrays.asList(allowedOrigins.split(","));
         configuration.setAllowedOriginPatterns(allowedOriginsList);
         
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
         
